--- a/index.html
+++ b/index.html
@@ -70,6 +70,21 @@
             <li><a href="/asd/5.pdf">L5 Scrum</a></li>
             <li><a href="/asd/6.pdf">L6 Agile at Scale</a></li>   
         </ul>
+
+        <ul>
+            <li style="font-size: larger; border: #333; border-radius: 4px; background-color: #0066cc81; color: rgb(255, 255, 255);"><b>SE</b><br>12.12 xx:xx-xx:xx @1</li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/se/ques.md">Exam Questions</a></li>
+            <li><a href="/se/1.pdf">L1 Introduction</a></li>
+            <li><a href="/se/2.pdf">L2 Class Modeling</a></li>
+            <li><a href="/se/3.pdf">L3 Class Modelling</a></li>
+            <li><a href="/se/4.pdf">L4 Use Case Modelling</a></li>
+            <li><a href="/se/5.pdf">L5 Use case and Sequence models</a></li>
+            <li><a href="/se/6.pdf">L6 Sequence models</a></li>
+            <li><a href="/se/7.pdf">L7 Activity diagrams</a></li>
+            <li><a href="/se/8.pdf">L8 Business Process Modelling</a></li>
+            <li><a href="/se/9.pdf">L9 State Modeling</a></li>
+            <li><a href="/se/10.pdf">L10 Statechart Modeling</a></li>
+        </ul>
     </div>
 </body>
 </html>
