--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h4 style="text-align: center;">by Xinjian</h4>
         <hr>
         <ul>
-            <li style="font-size: larger; border: #333; border-radius: 4px; background-color: #0066cc81; color: rgb(255, 255, 255);"><b>ASD</b><br>12.12 xx:xx-xx:xx @1</li>
+            <li style="font-size: larger; border: #333; border-radius: 4px; background-color: #0066cc81; color: rgb(255, 255, 255);"><b>Aigle Software Development</b><br>12.12 xx:xx-xx:xx @1</li>
             <li><a href="/asd/1.pdf">L1 Introduction</a></li>
             <li><a href="/asd/2.pdf">L2 TDD</a></li>
             <li><a href="/asd/3.pdf">L3 Requirements management in ASD</a></li>
@@ -72,18 +72,62 @@
         </ul>
 
         <ul>
-            <li style="font-size: larger; border: #333; border-radius: 4px; background-color: #0066cc81; color: rgb(255, 255, 255);"><b>SE</b><br>12.12 xx:xx-xx:xx @1</li>
-            <li style="background-color: coral; border-radius: 3px;"><a href="/se/ques.md">Exam Questions</a></li>
-            <li><a href="/se/1.pdf">L1 Introduction</a></li>
-            <li><a href="/se/2.pdf">L2 Class Modeling</a></li>
-            <li><a href="/se/3.pdf">L3 Class Modelling</a></li>
-            <li><a href="/se/4.pdf">L4 Use Case Modelling</a></li>
-            <li><a href="/se/5.pdf">L5 Use case and Sequence models</a></li>
-            <li><a href="/se/6.pdf">L6 Sequence models</a></li>
-            <li><a href="/se/7.pdf">L7 Activity diagrams</a></li>
-            <li><a href="/se/8.pdf">L8 Business Process Modelling</a></li>
-            <li><a href="/se/9.pdf">L9 State Modeling</a></li>
-            <li><a href="/se/10.pdf">L10 Statechart Modeling</a></li>
+            <li style="font-size: larger; border: #333; border-radius: 4px; background-color: #0066cc81; color: rgb(255, 255, 255);"><b>System Modelling</b><br>12.12 xx:xx-xx:xx @1</li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/sm/ques.md">Exam Questions</a></li>
+            <li><a href="/sm/1.pdf">L1 Introduction</a></li>
+            <li><a href="/sm/2.pdf">L2 Class Modeling</a></li>
+            <li><a href="/sm/3.pdf">L3 Class Modelling</a></li>
+            <li><a href="/sm/4.pdf">L4 Use Case Modelling</a></li>
+            <li><a href="/sm/5.pdf">L5 Use case and Sequence models</a></li>
+            <li><a href="/sm/6.pdf">L6 Sequence models</a></li>
+            <li><a href="/sm/7.pdf">L7 Activity diagrams</a></li>
+            <li><a href="/sm/8.pdf">L8 Business Process Modelling</a></li>
+            <li><a href="/sm/9.pdf">L9 State Modeling</a></li>
+            <li><a href="/sm/10.pdf">L10 Statechart Modeling</a></li>
+        </ul>
+
+        <ul>
+            <li style="font-size: larger; border: #333; border-radius: 4px; background-color: #0066cc81; color: rgb(255, 255, 255);"><b>Requirement Engineering</b><br>12.12 xx:xx-xx:xx @1</li>
+            <li><a href="/re/les1.pdf">L1 Introduction</a></li>
+            <span style="color:red"><b>L2 Introduction to RE</b></span>
+            <li><a href="/re/les2/1.pdf">2.1 Introduction to RE</a></li>
+            <li><a href="/re/les2/2.pdf">2.2 RE framework</a></li>
+            <li><a href="/re/les2/3.pdf">2.3 Project Scenario</a></li>
+            <span style="color:red"><b>L3 RE activities</b></span>
+            <li><a href="/re/les3/1.pdf">3.1 Requirements Elicitation - Stakeholders, Requirements Elicitation Techniques</a></li>
+            <li><a href="/re/les3/2.pdf">3.2 Requirements Elicitation - Good requirements</a></li>
+            <li><a href="/re/les3/3.pdf">3.3 Requirements Example</a></li>
+            <span style="color:red"><b>L4 RE activities cont</b></span>
+            <li><a href="/re/les4/1.pdf">4.1 Requirement Negotiation</a></li>
+            <li><a href="/re/les4/2.pdf">4.2 Requirement Specification</a></li>
+            <span style="color:red"><b>L5 Non-functional Requirements and Requirements Management</b></span>
+            <li><a href="/re/les5/1.pdf">5.1 Non-functional Requirements</a></li>
+            <li><a href="/re/les5/2.pdf">5.2 Requirements Management Objectives</a></li>
+            <li><a href="/re/les5/3.pdf">5.3 Requirements Traceability</a></li>
+            <li><a href="/re/les5/4.pdf">5.4 Req Traceability Exercise</a></li>
+            <span style="color:red"><b>L6 Requirements management</b></span>
+            <li><a href="/re/les6/1.pdf">6.1 Requirements Prioritisation</a></li>
+            <li><a href="/re/les6/2.pdf">6.2 Requirements change management</a></li>
+            <li><a href="/re/les6/3.pdf">6.3 Quiz</a></li>
+            <span style="color:red"><b>L7 Requirement Goal</b></span>
+            <li><a href="/re/les7/1.pdf">7.1 Goal Modelling</a></li>
+            <li><a href="/re/les7/2.pdf">7.2 Model Example</a></li>
+            <span style="color:red"><b>L8 Requirements Scenarios</b></span>
+            <li><a href="/re/les8/1.pdf">8.1 Scenario Modelling</a></li>
+            <li><a href="/re/les8/2.pdf">8.2 Scenario Examples</a></li>
+            <span style="color:red"><b>L9 Solution-Oriented Requirements</b></span>
+            <li><a href="/re/les9/1.pdf">9.1 Solution-Oriented Req</a></li>
+            <li><a href="/re/les9/2.pdf">9.2 Req Modelling Example</a></li>
+            <li><a href="/re/les9/3.pdf">9.3 Example 2</a></li> 
+            <li><a href="/re/les10.pdf">L10 Requirements Validation</a></li>
+            <br>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/re/test/1.pdf">Test 1</a></li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/re/test/1sol.pdf">Test 1 Solution</a></li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/re/test/2.pdf">Test 2</a></li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/re/test/2sol.pdf">Test 2 Solution</a></li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/re/test/3.pdf">Test 3</a></li>
+            <li style="background-color: coral; border-radius: 3px;"><a href="/re/test/3sol.pdf">Test 3 Solution</a></li>
+
         </ul>
     </div>
 </body>
